--- a/qdrant-landing/themes/qdrant/layouts/partials/steps-form.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/steps-form.html
@@ -66,6 +66,7 @@
       // Fetch all the forms we want to apply custom Bootstrap validation styles to
       var form = document.getElementById({{ $random }});
 
+      console.log(form)
       form.addEventListener('submit', function(event) {
         if (form.checkValidity() === false) {
           event.preventDefault();
