--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -10719,6 +10719,10 @@ article:first-of-type figure {
   display: flex;
   justify-content: space-between;
 }
+.steps-form .owl-prev.disabled .btn,
+.steps-form .owl-next.disabled .btn {
+  display: none;
+}
 
 /***
 
