--- a/qdrant-landing/themes/qdrant/static/css/blocks/steps-form.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/steps-form.scss
@@ -15,6 +15,9 @@
     border-top-color: var(--brand-primary);
     border-left-color: var(--brand-primary);
     border-bottom-color: var(--brand-primary);
+    position: absolute;
+    top: 35%;
+    left: calc(50% - 4rem);
   }
 
   &__form {
