--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -10675,6 +10675,9 @@ article:first-of-type figure {
   border-top-color: var(--brand-primary);
   border-left-color: var(--brand-primary);
   border-bottom-color: var(--brand-primary);
+  position: absolute;
+  top: 35%;
+  left: calc(50% - 4rem);
 }
 .steps-form__form {
   align-self: center;
