--- a/qdrant-landing/themes/qdrant/layouts/partials/steps-form.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/steps-form.html
@@ -3,7 +3,7 @@
 <!--suppress XmlDuplicatedId -->
 <div class="steps-form row">
     <form class="steps-form__form col-12 col-md-10 col-lg-6" name="cloud-request"
-          method="POST" id="{{ $random }}" novalidate>
+          method="POST" id="{{ $random }}" novalidate data-netlify="true">
         <div class="spinner-border steps-form__spinner" role="status" style="width: 5rem; height: 5rem;">
             <span class="sr-only">Loading...</span>
         </div>
