--- a/qdrant-landing/themes/qdrant/layouts/demo/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/demo/list.html
@@ -3,14 +3,13 @@
 {{ range $i,$p := where .Data.Pages "Section" "demo" }}
 
 <section class="api-section mt-0 mt-md-5 mb-5">
-    <div class="pattern-layer" style="background-image: url(images/background/pattern-8.png)"></div>
-    <div class="auto-container">
-        <div class="row clearfix align-items-center pt-4 pt-md-0">
+    <div class="auto-container mt-md-5">
+        <div class="row clearfix align-content-center align-items-center pt-4 pt-md-0 mb-4 mb-md-5">
 
             <!-- Content Column -->
             <div class="content-column col-lg-6 col-md-12 col-sm-12 order-1
                  {{if not (modBool $i 2)}} order-md-2{{ else }} order-md-0{{ end }}">
-                <div class="inner-column">
+                <div class="inner-column pt-0">
                     <!-- Sec Title -->
                     <div class="sec-title">
                         <h2>{{ $p.Title }}</h2>
@@ -21,9 +20,9 @@
             </div>
 
             <!-- Image Column -->
-            <div class="image-column col-lg-6 col-md-12 col-sm-12 order-0 order-md-1">
+            <div class="image-column col-lg-6 col-md-12 col-sm-12 order-0 order-md-1 mb-0">
                 <div class="inner-column parallax-scene-2">
-                    <div data-depth="0.30" class="image parallax-layer">
+                    <div data-depth="0.30" class="image border">
                         <img src="{{ $p.Params.preview_image }}" alt=""/>
                     </div>
                 </div>
