--- a/qdrant-landing/themes/qdrant/layouts/demo/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/demo/list.html
@@ -9,7 +9,7 @@
             <!-- Content Column -->
             <div class="content-column col-lg-6 col-md-12 col-sm-12 order-1
                  {{if not (modBool $i 2)}} order-md-2{{ else }} order-md-0{{ end }}">
-                <div class="inner-column pt-0">
+                <div class="inner-column pt-4 pt-lg-0">
                     <!-- Sec Title -->
                     <div class="sec-title">
                         <h2>{{ $p.Title }}</h2>
