--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -16082,7 +16082,12 @@ img {
 ***/
 .price-page-section {
   position: relative;
-  padding: 95px 0px 0px;
+  padding: 30px 0 0 0;
+}
+@media (min-width: 992px) {
+  .price-page-section {
+    padding-top: 140px;
+  }
 }
 
 .price-block {
