--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -5219,7 +5219,11 @@ img{
 
 .price-page-section{
 	position:relative;
-	padding:95px 0px 0px;
+	padding: 30px 0 0 0;
+
+	@include media-breakpoint-up(lg) {
+		padding-top: 140px;
+	}
 }
 
 .price-block{
