renamed a directory with the cloud form to Surveys to make it reusable

--- a/qdrant-landing/themes/qdrant/layouts/cloud/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/cloud/list.html
@@ -38,7 +38,7 @@
                             <p><small>By continuing you will consent to all of our terms and conditions and you agree to be contacted again for your onboarding.
                             </small></p>
 
-                            <a class="theme-btn btn-style-three mt-4" href="/cloud-form/">
+                            <a class="theme-btn btn-style-three mt-4" href="/surveys/cloud-request/">
                                 <span class="txt">Estimate Project</span>
                             </a>
                         </div>
@@ -82,7 +82,7 @@
                         <div class="text">Capitalize on low hanging fruit to identify a ball to park value added
                             activity to beta test
                         </div>
-                        <a href="/cloud-form/" class="start-btn theme-btn">Request price</a>
+                        <a href="/surveys/cloud-request/" class="start-btn theme-btn">Request price</a>
                         <ul class="price-list">
                             <li>Receive Contract</li>
                             <li>Create 1 Custom Template</li>
@@ -104,7 +104,7 @@
                         <div class="text">Capitalize on low hanging fruit to identify a ball to park value added
                             activity to beta test
                         </div>
-                        <a href="/cloud-form/" class="start-btn theme-btn">Request price</a>
+                        <a href="/surveys/cloud-request/" class="start-btn theme-btn">Request price</a>
                         <ul class="price-list">
                             <li>Receive Contract</li>
                             <li>Create 1 Custom Template</li>
