--- a/qdrant-landing/themes/qdrant/static/css/blocks/steps-form.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/steps-form.scss
@@ -12,12 +12,12 @@
     align-self: center;
     width: 8rem;
     height: 8rem;
-    border-top-color: var(--brand-primary);
-    border-left-color: var(--brand-primary);
-    border-bottom-color: var(--brand-primary);
     position: absolute;
     top: 35%;
     left: calc(50% - 4rem);
+    border-top-color: var(--brand-primary);
+    border-bottom-color: var(--brand-primary);
+    border-left-color: var(--brand-primary);
   }
 
   &__form {
@@ -57,11 +57,21 @@
     font-size: $form-font-size;
 
     &_big {
-      line-height: 1.5;
       font-size: $form-font-size + 0.4rem;
+      line-height: 1.5;
     }
   }
 
+  label a {
+    text-decoration: underline;
+    color: inherit;
+    font-size: inherit;
+    transition: 0.25s ease all;
+    &:hover {
+      color: var(--brand-primary);
+      text-decoration: none;
+    }
+  }
 
   .owl-stage {
     display: flex;
