--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -55,7 +55,7 @@
 @import url('colors.css');
 
 @import "article";
-
+@import "blocks/logo";
 @import "blocks/button";
 @import "blocks/copy-btn";
 @import "blocks/hero-code";
@@ -867,15 +867,15 @@ img{
 	padding:30px 0px;
 }
 
-.main-header .main-box .logo-box .logo img{
+/* .main-header .main-box .logo-box .logo img{
 	display:inline-block;
-	max-width:100%;
+	max-width:100%; */
 	/* -webkit-transition:all 300ms ease; */
 	/* -ms-transition:all 300ms ease; */
 	/* -o-transition:all 300ms ease; */
 	/* -moz-transition:all 300ms ease; */
 	/* transition:all 300ms ease;	 */
-}
+// }
 
 .main-header .header-upper{
 	position:relative;
