--- a/qdrant-landing/themes/qdrant/layouts/cloud/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/cloud/list.html
@@ -1,10 +1,55 @@
-{{ define "main" }}
+{{ partial "header" . }}
+
+<style>
+  #mc_embed_signup input.mce_inline_error {
+    border-color:#5C0A1C;
+  }
+  #mc_embed_signup div.mce_inline_error {
+    padding: 5px 10px;
+    font-weight: bold;
+    z-index: 1;
+    background-color: transparent;
+    color:var(--brand-primary);
+  }
+  .main-header {
+    background-image: url(/images/background/2.png);
+  }
+  #mce-success-response {
+    padding-bottom: 25px;
+    color: green;
+    font-size: 140%;
+  }
+  #mce-error-response {
+    padding-bottom: 25px;
+    color: red;
+  }
+</style>
+
 <section class="price-page-section">
     <div class="auto-container">
+        <div class="row clearfix">
+            <div class="title-column col-12">
+                <div class="inner-column">
+                    <!-- Sec Title -->
+                    <div class="sec-title centered">
+                        <h2>Get <span>Early Access</span> to Qdrant Cloud</h2>
+                        <div class="text"><h4>Join the waiting list for the Qdrant cloud-hosted version private beta.</h4>
+
+                            <p><small>By continuing you will consent to all of our terms and conditions and you agree to be contacted again for your onboarding.
+                            </small></p>
+
+                            <a class="theme-btn btn-style-three mt-4" href="/surveys/cloud-request/">
+                                <span class="txt">Estimate Project</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row clearfix" id="price-offers">
 
             <!-- Price Block -->
-            <div class="price-block col-lg-4 col-md-6 col-sm-12">
+            <div class="price-block col-lg-4 col-md-6 col-sm-12 mb-5 pb-5">
                 <div class="inner-box">
                     <div class="title">Opensource</div>
                     <div class="content-box">
@@ -37,7 +82,7 @@
                         <div class="text">Capitalize on low hanging fruit to identify a ball to park value added
                             activity to beta test
                         </div>
-                        <a href="#request-form" class="start-btn theme-btn">Request price</a>
+                        <a href="/surveys/cloud-request/" class="start-btn theme-btn">Request price</a>
                         <ul class="price-list">
                             <li>Receive Contract</li>
                             <li>Create 1 Custom Template</li>
@@ -59,7 +104,7 @@
                         <div class="text">Capitalize on low hanging fruit to identify a ball to park value added
                             activity to beta test
                         </div>
-                        <a href="#request-form" class="start-btn theme-btn">Request price</a>
+                        <a href="/surveys/cloud-request/" class="start-btn theme-btn">Request price</a>
                         <ul class="price-list">
                             <li>Receive Contract</li>
                             <li>Create 1 Custom Template</li>
@@ -73,46 +118,4 @@
     </div>
 </section>
 <!-- End Pricing Page Section -->
-
-<!-- Call To Action Section -->
-<section class="call-to-action-section" data-spy="scroll" data-target="#price-offers">
-    <div class="auto-container" id="request-form">
-        <div class="inner-container">
-            <div class="row clearfix">
-
-                <!-- Title Column -->
-                <div class="title-column col-lg-7 col-sm-12 col-sm-12">
-                    <div class="inner-column">
-                        <!-- Sec Title -->
-                        <div class="sec-title">
-                            <h2>Ready To <span>Get Started</span></h2>
-                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Morbi
-                                finibus at mauris eu sollicitudin.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Email Column -->
-                <div class="email-column col-lg-5 col-sm-12 col-sm-12">
-                    <div class="inner-column">
-                        <!-- Newsletter Form -->
-                        <div class="newsletter-form">
-                            <form method="post" action="contact.html">
-                                <div class="form-group">
-                                    <input type="email" name="email" value="" placeholder="Enter Your Email"
-                                           required="">
-                                    <button type="submit" class="theme-btn btn-style-one"><span class="txt">Estimate Project</span>
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-</section>
-<!-- End Call To Action Section -->
-{{ end }}
+{{ partial "footer" . }}
