cloud button in the header

--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -126,6 +126,8 @@
                            {{ end }}
 
                            <li>
+                               <a class="btn btn_in-header mr-3" href="/cloud/" title="github" role="button">
+                                   <span class="btn btn__text"><i class="icon flaticon-github"></i> Cloud</span></a>
                                <a class="btn btn_in-header" href="{{ .Site.Params.github }}" target="_blank" title="github" role="button">
                                    <span class="btn btn__text"><i class="icon flaticon-github"></i> Github</span></a>
 
