--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -75,7 +75,7 @@
                   <div class="clearfix">
           
                     <div class="pull-left logo-box">
-                      <div class="logo logo_with-text {{ if not .IsHome }}logo_dark-bg{{ end }}">
+                      <div class="logo logo_with-text {{ if .IsHome }}logo_home{{ end }}">
                           <a href="/" class="logo__link"></a>
                       </div>
                     </div>
