--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -10102,21 +10102,34 @@ article:first-of-type figure {
 .logo__link {
   display: block;
   height: 100%;
-  background: url("/images/logo_with_text.svg") no-repeat;
+  background: url("/images/logo_with_text_dark_bg.png") no-repeat;
   background-size: contain;
 }
 .logo_with-text {
   width: 192px;
   height: 55px;
 }
-.logo_dark-bg .logo__link {
-  background: url("/images/logo_with_text_dark_bg.svg") no-repeat;
+.logo_home .logo__link {
+  background: url("/images/logo_with_text.png") no-repeat;
   background-size: contain;
+}
+@media only screen and (min-width: 1024px) and (max-width: 1140px) {
+  .logo_home .logo__link {
+    background: url("/images/logo_with_text_dark_bg.png") no-repeat;
+    background-size: contain;
+  }
 }
 
 .fixed-header .logo_with-text .logo__link {
-  background: url("/images/logo_with_text.svg") no-repeat;
+  background: url("/images/logo_with_text.png") no-repeat;
   background-size: contain;
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1140px) {
+  .fixed-header .logo_with-text.logo_home .logo__link {
+    background: url("/images/logo_with_text_dark_bg.png") no-repeat;
+    background-size: contain;
+  }
 }
 
 .btn_in-header {
