--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -10102,7 +10102,7 @@ article:first-of-type figure {
 .logo__link {
   display: block;
   height: 100%;
-  background: url("/images/logo_with_text_dark_bg.png") no-repeat;
+  background: url("/images/logo_with_text_dark_bg.svg") no-repeat;
   background-size: contain;
 }
 .logo_with-text {
@@ -10110,24 +10110,24 @@ article:first-of-type figure {
   height: 55px;
 }
 .logo_home .logo__link {
-  background: url("/images/logo_with_text.png") no-repeat;
+  background: url("/images/logo_with_text.svg") no-repeat;
   background-size: contain;
 }
 @media only screen and (min-width: 1024px) and (max-width: 1140px) {
   .logo_home .logo__link {
-    background: url("/images/logo_with_text_dark_bg.png") no-repeat;
+    background: url("/images/logo_with_text_dark_bg.svg") no-repeat;
     background-size: contain;
   }
 }
 
 .fixed-header .logo_with-text .logo__link {
-  background: url("/images/logo_with_text.png") no-repeat;
+  background: url("/images/logo_with_text.svg") no-repeat;
   background-size: contain;
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1140px) {
   .fixed-header .logo_with-text.logo_home .logo__link {
-    background: url("/images/logo_with_text_dark_bg.png") no-repeat;
+    background: url("/images/logo_with_text_dark_bg.svg") no-repeat;
     background-size: contain;
   }
 }
