swagger-ui shortcode

--- a/qdrant-landing/themes/qdrant/layouts/partials/css.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/css.html
@@ -28,3 +28,4 @@
 <link rel="stylesheet" href="{{ "css/lang-switcher.css" | absURL }}">
 
 <link rel="stylesheet" href="{{ "css/mathjax.css" | absURL }}">
+<link href="{{ "/css/swagger-css/swagger-ui.css" | relURL }}" rel="stylesheet" type="text/css">
