--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -10044,11 +10044,16 @@ article aside[role=status]:before {
 
 article:first-of-type {
   padding-top: 18px;
+  font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
+  font-size: 20px;
 }
 @media (min-width: 768px) {
   article:first-of-type {
     padding-top: 38px;
   }
+}
+article:first-of-type table {
+  font-size: 20px;
 }
 article:first-of-type pre {
   position: relative;
@@ -10067,11 +10072,17 @@ article:first-of-type ul > li {
   list-style: disc;
   margin: 0 0 0 2em;
   position: relative;
+  font-size: 20px;
 }
 article:first-of-type ol > li {
   list-style: decimal;
   margin: 0 0 0 2em;
   position: relative;
+  font-size: 20px;
+}
+article:first-of-type h1, article:first-of-type h2, article:first-of-type h3, article:first-of-type h4, article:first-of-type h5, article:first-of-type h6 {
+  margin-bottom: 1rem;
+  font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 article:first-of-type h1 {
   font-size: 2.25rem;
@@ -10094,6 +10105,7 @@ article:first-of-type h6 {
 article:first-of-type p {
   line-height: 1.8em;
   margin-bottom: 0.7rem;
+  font-size: 20px;
 }
 article:first-of-type figure {
   text-align: center;
