--- a/qdrant-landing/themes/qdrant/layouts/cloud/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/cloud/list.html
@@ -51,20 +51,19 @@
             <!-- Price Block -->
             <div class="price-block col-lg-4 col-md-6 col-sm-12 mb-5 pb-5">
                 <div class="inner-box">
-                    <div class="title">Opensource</div>
+                    <div class="title">Open Source</div>
                     <div class="content-box">
                         <div class="price-box">
                             <span class="icon flaticon-skyline"></span> Free
                             <span class="price-title">&nbsp;</span>
                         </div>
-                        <div class="text">Capitalize on low hanging fruit to identify a ball to park value added
-                            activity to beta test
+                        <div class="text">Build your AI-based applications using our leading open-source vector search technology.
                         </div>
-                        <a href="/documentation/quick_start/" class="start-btn theme-btn">Get started</a>
+                        <a href="/documentation/quick_start/" class="start-btn theme-btn">Quick Start</a>
                         <ul class="price-list">
-                            <li>Receive Contract</li>
-                            <li>Create 1 Custom Template</li>
-                            <li>Multiple Signature</li>
+                            <li>Free & Open Forever</li>
+                            <li>Full-Featured</li>
+                            <li>Community support</li>
                         </ul>
                     </div>
                 </div>
@@ -73,20 +72,20 @@
             <!-- Price Block -->
             <div class="price-block col-lg-4 col-md-6 col-sm-12">
                 <div class="inner-box">
-                    <div class="title">Standard</div>
+                    <div class="title">Managed Cloud</div>
                     <div class="content-box">
                         <div class="price-box">
-                            <span class="icon flaticon-skyline"></span> price on request
-                            <span class="price-title">/ per managed cluster</span>
+                            <span class="icon flaticon-skyline"></span> Pay as You Go
+                            <span class="price-title">Per pod/hour</span>
                         </div>
-                        <div class="text">Capitalize on low hanging fruit to identify a ball to park value added
-                            activity to beta test
+                        <div class="text">Scale your production solutions in the managed cloud without deployment and maintenance overhead.
                         </div>
-                        <a href="/surveys/cloud-request/" class="start-btn theme-btn">Request price</a>
+                        <a href="/surveys/cloud-request/" class="start-btn theme-btn">Join Cloud Beta</a>
                         <ul class="price-list">
-                            <li>Receive Contract</li>
-                            <li>Create 1 Custom Template</li>
-                            <li>Multiple Signature</li>
+                            <li>Managed & Monitored by Us</li>
+                            <li>High Availability & Performance</li>
+                            <li>Turnkey Data Migration</li>
+                            <li>Expert Support</li>
                         </ul>
                     </div>
                 </div>
@@ -98,17 +97,17 @@
                     <div class="title">Enterprise</div>
                     <div class="content-box">
                         <div class="price-box">
-                            <span class="icon flaticon-skyline"></span> price on request
+                            <span class="icon flaticon-skyline"></span> Price on Request
                             <span class="price-title">/ per managed cluster</span>
                         </div>
-                        <div class="text">Capitalize on low hanging fruit to identify a ball to park value added
-                            activity to beta test
+                        <div class="text">Let us take care of your on-premise deployments to achieve the best possible performance and accuracy.
                         </div>
-                        <a href="/surveys/cloud-request/" class="start-btn theme-btn">Request price</a>
+                        <a href="{{ .Site.Params.mailchimp_contact_form }}" class="start-btn theme-btn">Contact sales</a>
                         <ul class="price-list">
-                            <li>Receive Contract</li>
-                            <li>Create 1 Custom Template</li>
-                            <li>Multiple Signature</li>
+                            <li>Performance & Deployment Consulting</li>
+                            <li>Neural Network Encoder Fine-Tuning</li>
+                            <li>Migration and Monitoring Tools</li>
+                            <li>Dedicated Support</li>
                         </ul>
                     </div>
                 </div>
